# dll-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat
interface/: interfaces.h
interface/token/: token.h
interface/token/unary_operator/: unary_operator.cpp  unary_operator.h
interface/token/unary_operator/operator/: operator.cpp  operator.h
interface/token/value/: value.h
lib/: dllData.h  dllScheme.h
lib/addition/: add.cpp  add.h
lib/deduction/: deduction.cpp
lib/factorial/: factorial.cpp
lib/multiplication/: mul.cpp  mul.h
lib/power/: power.cpp
lib/sin/: sin.cpp
lib/subtraction/: subtraction.cpp
lib/unar_substruction/: unar_substruction.cpp
source/: main.cpp
source/dll_loader/: dll_loader.cpp  dll_loader.h
source/interface/: interfaces.h
source/interface/operator/: operator.cpp  operator.h
source/interface/value/: value.cpp  value.h
source/rpn/: rpn.cpp  rpn.h
source/types/: types.h
